--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
     </div>
   </div>
   <div class="grid">
-    <h3>Check out our most<br>popular courses!</h3>
+    <div class="h3">
+      <h3>Check out our most<br>popular courses!</h3>
+    </div>
+    
     <div class="box">
       <img src="assets/icon-animation.svg" alt="Animation">
       <h4>Animation</h4>
